# Calculator-Salary

./: .env  Cargo.toml  Dockerfile  README.md  deploy.sh
src/: config.rs  health.rs  index.html  main.rs  metrics.rs  script.js  style.css  tax.rs
