[package]
name = "calculator-salary"
authors = ["Jimmy Tseng", "Jimmy Tseng <jimmy.tseng@circuit.au>"]
homepage = "https://salary.circuit.au"
repository = "https://github.com/Circuit-Health/Calculator-Salary/"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4.20"
prometheus = "0.13.3"
env_logger = "0.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }